# clogs

./: .gitignore  LICENSE  README.md  clogs.py  pyproject.toml
clogs/: __init__.py  cli.py  config.py  context.py  formatter.py  parser.py
clogslib/: __init__.py  cli.py  config.py  context.py  formatter.py  parser.py
tests/: test_cli.py  test_context.py  test_formatter.py  test_parser.py
